--- a/SplineCAD/SplineCAD.csproj
+++ b/SplineCAD/SplineCAD.csproj
@@ -82,9 +82,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Data\MainDataContext.cs" />
+    <Compile Include="Objects\Cube.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="Rendering\Mesh.cs" />
     <Compile Include="Rendering\RenderingContext.cs" />
     <Compile Include="Rendering\Shader.cs" />
+    <Compile Include="Rendering\Vertex.cs" />
     <Compile Include="UIControls\Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
     </Compile>
