--- a/SplineCAD/SplineCAD.csproj
+++ b/SplineCAD/SplineCAD.csproj
@@ -83,11 +83,14 @@
     </ApplicationDefinition>
     <Compile Include="Data\MainDataContext.cs" />
     <Compile Include="Objects\Cube.cs" />
+    <Compile Include="Objects\IPoint.cs" />
+    <Compile Include="Objects\PointCollection.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="Rendering\ExplicitMesh.cs" />
     <Compile Include="Rendering\Mesh.cs" />
     <Compile Include="Rendering\RenderingContext.cs" />
     <Compile Include="Rendering\Shader.cs" />
-    <Compile Include="Rendering\Vertex.cs" />
+    <Compile Include="Rendering\PositionVertex.cs" />
     <Compile Include="UIControls\Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
     </Compile>
@@ -141,6 +144,8 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="Shaders\pointShader.frag" />
+    <None Include="Shaders\pointShader.vert" />
     <None Include="Shaders\test.frag" />
     <None Include="Shaders\test.vert" />
   </ItemGroup>
