--- a/SplineCAD/SplineCAD.csproj
+++ b/SplineCAD/SplineCAD.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Utilities\BindableObject.cs" />
     <Compile Include="Utilities\CommandHandler.cs" />
     <Compile Include="Utilities\FileManager.cs" />
+    <Compile Include="Utilities\FloatWrapper.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
