--- a/SplineCAD/SplineCAD.csproj
+++ b/SplineCAD/SplineCAD.csproj
@@ -102,6 +102,9 @@
     <Compile Include="Rendering\Shader.cs" />
     <Compile Include="Rendering\PositionVertex.cs" />
     <Compile Include="Rendering\SurfaceMesh.cs" />
+    <Compile Include="SurfacePopup.xaml.cs">
+      <DependentUpon>SurfacePopup.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UIControls\Menu.xaml.cs">
       <DependentUpon>Menu.xaml</DependentUpon>
     </Compile>
@@ -133,6 +136,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SurfacePopup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UIControls\Menu.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
